[gd_scene load_steps=28 format=2]

[ext_resource path="res://Textures/colored_transparent_packed.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Player/sfx_movement_footsteps1a.wav" type="AudioStream" id=3]
[ext_resource path="res://Player/sfx_movement_footsteps1b.wav" type="AudioStream" id=4]
[ext_resource path="res://Textures/BubbleParticle.png" type="Texture" id=5]
[ext_resource path="res://Player/HeartContainer.gd" type="Script" id=6]
[ext_resource path="res://Sound/HitSound.wav" type="AudioStream" id=7]
[ext_resource path="res://Player/Camera2D.gd" type="Script" id=8]
[ext_resource path="res://Textures/SmokeParticle.png" type="Texture" id=9]
[ext_resource path="res://Scenes/Heart.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/MainTheme.tres" type="Theme" id=11]
[ext_resource path="res://Player/UI.gd" type="Script" id=12]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 1, 1, 1, 0.545098, 1, 1, 1, 0 )

[sub_resource type="CircleShape2D" id=3]
radius = 4.0

[sub_resource type="Animation" id=4]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Rect2( 400, 112, 16, 16 ), Rect2( 400, 112, 16, 10 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Rect2( 400, 112, 16, 10 ), Rect2( 400, 112, 16, 16 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 0.937255, 0.431373, 1 ) ]
}

[sub_resource type="AudioStreamRandomPitch" id=7]
audio_stream = ExtResource( 3 )

[sub_resource type="AudioStreamRandomPitch" id=8]
audio_stream = ExtResource( 4 )

[sub_resource type="Animation" id=9]
resource_name = "Roll"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -6 ), Vector2( 0, -16 ), Vector2( 0, -6 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:collision_layer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 1.5, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 1, 1, 9 ]
}

[sub_resource type="Animation" id=10]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -5.0, 5.0, 0.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "play_footstep"
}, {
"args": [  ],
"method": "play_footstep"
} ]
}

[sub_resource type="Animation" id=11]
resource_name = "show"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "HpChanged"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 528, 192, 16, 16 )

[sub_resource type="Animation" id=14]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.5, 1.5 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "equip"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Weapon:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ]
}

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
collision_layer = 9
collision_mask = 9
script = ExtResource( 2 )

[node name="WaterParticle" type="CPUParticles2D" parent="."]
emitting = false
amount = 5
lifetime = 0.5
local_coords = false
texture = ExtResource( 5 )
direction = Vector2( -1, 0 )
spread = 30.0
gravity = Vector2( 0, 0 )
initial_velocity = 23.64
damping = 8.63
scale_amount_curve = SubResource( 1 )

[node name="GroundParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 4
lifetime = 0.75
randomness = 0.27
lifetime_randomness = 0.54
local_coords = false
texture = ExtResource( 9 )
direction = Vector2( -1, 0 )
spread = 30.0
gravity = Vector2( 0, -10 )
initial_velocity = 13.94
initial_velocity_random = 1.0
damping = 8.63
scale_amount = 0.35
scale_amount_random = 0.51
scale_amount_curve = SubResource( 1 )
color_ramp = SubResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 0.937255, 0.431373, 1 )
position = Vector2( 0, -6 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 400, 112, 16, 16 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/enter_water = SubResource( 4 )
anims/exit_water = SubResource( 5 )
anims/take_dmg = SubResource( 6 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
process_mode = 0
script = ExtResource( 8 )

[node name="WalkSound1" type="AudioStreamPlayer" parent="."]
stream = SubResource( 7 )
volume_db = -10.0

[node name="WalkSound2" type="AudioStreamPlayer" parent="."]
stream = SubResource( 8 )
volume_db = -10.0

[node name="WalkAnim" type="AnimationPlayer" parent="."]
playback_speed = 5.0
anims/Roll = SubResource( 9 )
anims/walk = SubResource( 10 )

[node name="Weapon" type="Node2D" parent="."]
position = Vector2( 0, -4 )
scale = Vector2( 1e-05, 1e-05 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 11 )
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/UI"]
anims/show = SubResource( 11 )

[node name="HeartContainer" type="GridContainer" parent="UI/UI"]
anchor_right = 1.0
margin_right = -320.0
margin_bottom = 40.0
rect_min_size = Vector2( 80, 40 )
rect_pivot_offset = Vector2( 40, 20 )
mouse_filter = 2
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 5
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heart" parent="UI/UI/HeartContainer" instance=ExtResource( 10 )]

[node name="Heart2" parent="UI/UI/HeartContainer" instance=ExtResource( 10 )]
margin_left = 16.0
margin_right = 32.0

[node name="Heart3" parent="UI/UI/HeartContainer" instance=ExtResource( 10 )]
margin_left = 32.0
margin_right = 48.0

[node name="Heart4" parent="UI/UI/HeartContainer" instance=ExtResource( 10 )]
margin_left = 48.0
margin_right = 64.0

[node name="Heart5" parent="UI/UI/HeartContainer" instance=ExtResource( 10 )]
margin_left = 64.0
margin_right = 80.0

[node name="Heart6" parent="UI/UI/HeartContainer" instance=ExtResource( 10 )]
margin_top = 16.0
margin_bottom = 32.0

[node name="Heart7" parent="UI/UI/HeartContainer" instance=ExtResource( 10 )]
margin_left = 16.0
margin_top = 16.0
margin_right = 32.0
margin_bottom = 32.0

[node name="Heart8" parent="UI/UI/HeartContainer" instance=ExtResource( 10 )]
margin_left = 32.0
margin_top = 16.0
margin_right = 48.0
margin_bottom = 32.0

[node name="Heart9" parent="UI/UI/HeartContainer" instance=ExtResource( 10 )]
margin_left = 48.0
margin_top = 16.0
margin_right = 64.0
margin_bottom = 32.0

[node name="Heart10" parent="UI/UI/HeartContainer" instance=ExtResource( 10 )]
margin_left = 64.0
margin_top = 16.0
margin_right = 80.0
margin_bottom = 32.0

[node name="HeartAnim" type="AnimationPlayer" parent="UI/UI/HeartContainer"]
anims/HpChanged = SubResource( 12 )

[node name="SkullContainer" type="HBoxContainer" parent="UI/UI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -42.5433
margin_top = 0.930931
margin_right = 7.45667
margin_bottom = 20.9309
rect_min_size = Vector2( 50, 20 )
rect_pivot_offset = Vector2( 25, 10 )
mouse_filter = 2
custom_constants/separation = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SkullAmountLbl" type="Label" parent="UI/UI/SkullContainer"]
margin_left = 14.0
margin_right = 20.0
margin_bottom = 20.0
size_flags_vertical = 3
text = "0"
valign = 1

[node name="TextureRect" type="TextureRect" parent="UI/UI/SkullContainer"]
margin_left = 20.0
margin_right = 36.0
margin_bottom = 20.0
mouse_filter = 2
texture = SubResource( 13 )
stretch_mode = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/UI/SkullContainer"]
anims/SkullChanged = SubResource( 14 )

[node name="FpsCounter" type="Label" parent="UI/UI"]
visible = false
margin_left = 358.448
margin_top = 19.5288
margin_right = 398.448
margin_bottom = 32.5288
text = "Fps:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HurtSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="WeaponAnim" type="AnimationPlayer" parent="."]
anims/equip = SubResource( 15 )
[connection signal="hp_changed" from="." to="UI/UI/HeartContainer" method="_on_Player_hp_changed"]
